--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.3.1",
-    "fastify": "^4.23.1"
+    "fastify": "^4.23.1",
+    "zod": "^3.22.2"
   },
   "name": "upload-ai-api",
   "version": "1.0.0",
