--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
     "@types/node": "^20.6.0",
+    "dotenv": "^16.3.1",
     "prisma": "^5.3.1",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
@@ -9,6 +10,7 @@
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "^5.3.1",
     "fastify": "^4.23.1",
+    "openai": "^4.7.1",
     "zod": "^3.22.2"
   },
   "name": "upload-ai-api",
