--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "devDependencies": {
+    "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.6.0",
     "dotenv": "^16.3.1",
+    "eslint": "^8.49.0",
     "prisma": "^5.3.1",
     "tsx": "^3.12.10",
     "typescript": "^5.2.2"
